pref：header menu 后推至 theme/_config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
+# header - menu
+menu:
+  Home: /
+  About: /about
+  Contact: /contact
+  Friends: /links
+  Github: https://github.com/jiasm
+
 post_menu_side: right  # 默认 right
 
 favicon:
